
package com.wali.live.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "LivePKProto";

//连麦邀请（目前仅用于场控发起连麦）
//zhibo.live.micinvite
message MicInviteReq {
    required uint64 admin_uuid    = 1; //场控id
    required string liveid        = 2; //发起的主播房间号（场控发起传其进入的房间号）
    required uint64 mic_uuid      = 3; //被邀请主播id（场控发起传场控邀请的主播id）
    optional uint32 type          = 4; //0：未使用  1：场控发起，邀请主播1  2：场控发起，邀请主播2
    optional uint64 zuid          = 5; //场控所在房间主播id
}
message MicInviteRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//取消连麦邀请（目前仅用于场控发起连麦）
//zhibo.live.miccancelinvite
message MicCancelInviteReq {
    required uint64 admin_uuid    = 1; //场控id
    required string liveid        = 2; //发起的主播房间号（场控发起传其进入的房间号）
    required uint64 mic_uuid      = 3; //被邀请主播id（场控发起传场控邀请的主播id）
    optional uint32 type          = 4; //0：未使用  1：场控发起，取消邀请主播1  2：场控发起，取消邀请主播2
    optional uint64 zuid          = 5; //场控所在房间主播id
}
message MicCancelInviteRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//连麦接受（目前仅用于场控发起连麦）
//zhibo.live.micaccept
message MicAcceptReq {
    required uint64 admin_uuid    = 1; //场控id
    required uint64 mic_uuid      = 2; //主播2的id
    optional string mic_liveid    = 3; //主播2房间号
    optional uint32 type          = 4; //0：未使用 1：场控发起，主播1接受 2：场控发起，主播2接受
    optional uint64 zuid          = 5; //主播1的id
    optional string liveid        = 6; //主播1房间号
}
message MicAcceptRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//连麦拒绝（目前仅用于场控发起连麦）
//zhibo.live.micdecline
message MicDeclineReq {
    required uint64 admin_uuid    = 1; //场控id
    required uint64 mic_uuid      = 2; //主播2的id
    optional string mic_liveid    = 3; //主播2房间号
    optional uint32 type          = 4; //0：未使用 1：场控发起，主播1拒绝 2：场控发起，主播2拒绝
    optional uint64 zuid          = 5; //主播1的id
    optional string liveid        = 6; //主播1房间号
}
message MicDeclineRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//通知占线状态
//zhibo.live.micbusy
message MicBusyReq {
    required uint64 uuid          = 1; //处于busy状态的用户id
    optional string liveid        = 2; //处于busy状态的liveid
    optional uint64 invite_uuid   = 3; //发起用户id(例：场控邀请自己房间主播时，传场控id)
    optional uint64 zuid          = 4; //发起用户所在房间主播id
}
message MicBusyRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//zhibo.live.pksetting
message PKSettingReq {
    required uint64 uuid          = 1; //用户id
    required string liveid        = 2; //房间号
}

message PKSettingContent {
    optional uint32 id           = 1;
    optional string name         = 2;
    optional uint32 type         = 3;  //0:普通 1：自定义
}
message PKSettingDuration {
    optional uint32 id           = 1;
    optional string name         = 2;
    optional uint32 type         = 3;  //0:普通 1：自定义
}
message PKSettingPunish {
    optional uint32 id           = 1;
    optional string name         = 2;
    optional uint32 type         = 3;  //0:普通 1：自定义
}
message PKSettings {
    repeated PKSettingContent content     = 1; //pk内容 1：唱功 2：跳舞 3：乐器
    repeated PKSettingDuration duration   = 2; //pk时间 1: 3分钟 2: 10分钟 3:15分钟
    repeated PKSettingPunish punish   = 3; //pk惩罚
}
message PKSettingRsp {
    required uint32 ret_code         = 1; //0 代表成功
    optional PKSettings settings     = 2;
}
//zhibo.live.pkinvite
message PKSetting {
    required PKSettingContent content     = 1; //pk内容 1：唱功 2：跳舞 3：乐器
    required PKSettingDuration duration   = 2; //pk时间 1: 3分钟 2: 10分钟 3:15分钟
    optional PKSettingPunish punish       = 3; //pk惩罚
}
//zhibo.live.pkinvite
message PKInviteReq {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    required uint64 pk_uuid       = 3; //被pk用户id
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional PKSetting setting    = 5; //设置
    optional uint64 admin_uuid    = 6;//场控id
}

message PKInviteRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//zhibo.live.pkaccept
message PKAcceptReq {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required uint64 pk_uuid       = 2; //被pk用户id
    required string pk_liveid     = 3; //被pk房间号
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional uint64 admin_uuid    = 5;//场控id
}
message PKAcceptRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

//zhibo.live.pkdecline
message PKDeclineReq {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required uint64 pk_uuid       = 2; //被pk用户id
    required string pk_liveid     = 3; //被pk房间号
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional uint64 admin_uuid    = 5;//场控id
}
message PKDeclineRsp {
    required uint32 ret_code     = 1; //0 代表成功
}


message NewPKInfo {
    optional uint32 pk_type         = 1; //0:主播发起 1：场控发起
    optional PKInfoItem first       = 2; //发起方
    optional PKInfoItem second      = 3; //被pk方
    optional uint64 admin_uuid      = 4; //场控id
    optional uint64 invite_ts       = 5; //邀请时间
    optional uint64 begin_ts        = 6; //开始时间
    optional PKSetting setting      = 7; //pk设置
}

//zhibo.live.pkcancelinvite
message PKCancelInviteReq {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    required uint64 pk_uuid       = 3; //被pk用户id
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional PKSetting setting    = 5; //设置
    optional uint64 admin_uuid    = 6;//场控id
}

message PKCancelInviteRsp {
    required uint32 ret_code     = 1; //0 代表成功
}

// -------------------------------------PUSH----------------------------------------------------------------
//pk开始消息
message PKBeginMessage {
    optional NewPKInfo pk_info = 1;
}

//pk结束消息
message PKEndMessage {
    optional NewPKInfo pk_info = 1;
    optional uint64  from_uuid        = 2; //发起用户id
    optional uint32 type              = 3; //0：正常结束 1：提前结束
}


message PKInfoItem {
    optional uint64 uuid            = 1; //用户id
    optional string liveid          = 2; //房间号
    optional uint64 score           = 3; //分数
    optional string nickname        = 4; //主播的昵称
}

message PKScoreChangeMsg {
    optional NewPKInfo pk_info = 1;
}


message PKSysMsg {
    optional uint32 type   = 1; //1.邀请（PKInviteMsg ） 2.接受（PKAcceptMsg ） 3.拒绝（PKDeclineMsg ）
    optional bytes ext_msg = 2;
}

message PKInviteMsg {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    required uint64 pk_uuid       = 3; //被pk用户id
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional string nickname      = 5; //发起主播的昵称
    optional PKSetting setting    = 6; //pk设置

    optional uint64 admin_uuid    = 7; //场控id
    optional string admin_nickname = 8; //场控的昵称
    optional string pk_nickname   = 9; //被pk主播的昵称
}

message PKCancelInviteMsg {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    required uint64 pk_uuid       = 3; //被pk用户id
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional string nickname      = 5; //发起主播的昵称

    optional uint64 admin_uuid    = 7; //场控id
    optional string admin_nickname = 8; //场控的昵称
    optional string pk_nickname   = 9; //被pk主播的昵称
}

message PKAcceptMsg {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required uint64 pk_uuid       = 2; //被pk用户id
    required string pk_liveid     = 3; //被pk房间号
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请

    optional uint64 admin_uuid    = 5; //场控id
    optional string nickname      = 6; //发起主播的昵称
    optional string admin_nickname = 7; //场控的昵称
    optional string pk_nickname   = 8; //被pk主播的昵称
}

message PKDeclineMsg {
    required uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    required uint64 pk_uuid       = 2; //被pk用户id
    required string pk_liveid     = 3; //被pk房间号
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请

    optional uint64 admin_uuid    = 5; //场控id
    optional string nickname      = 6; //发起主播的昵称
    optional string admin_nickname = 7; //场控的昵称
    optional string pk_nickname   = 8; //被pk主播的昵称
}

message PKMicInviteMsg {
    optional uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    optional uint64 mic_uuid       = 3; //被邀请连麦用户id
    optional uint32 type          = 4; //0:未使用 1：场控邀请
    optional string nickname      = 5; //发起主播的昵称
    optional uint64 admin_uuid    = 6; //场控id
    optional string admin_nickname = 7; //场控的昵称
    optional string mic_nickname   = 8; //被邀请连麦用户昵称
}

message PKMicCancelInviteMsg {
    optional uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional string liveid        = 2; //发起的主播房间号（场控发起传进入的房间号）
    optional uint64 mic_uuid       = 3; //被邀请连麦用户id
    optional uint32 type          = 4; //0:未使用 1：场控邀请
    optional string nickname      = 5; //发起主播的昵称
    optional uint64 admin_uuid    = 6; //场控id
    optional string admin_nickname = 7; //场控的昵称
    optional string mic_nickname   = 8; //被邀请连麦用户昵称
}

message PKMicAcceptMsg {
    optional uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional uint64 mic_uuid      = 2; //被邀请连麦用户id
    optional string mic_liveid    = 3; //被邀请连麦用户liveid
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional uint64 admin_uuid    = 5; //场控id
    optional string nickname      = 6; //发起主播的昵称
    optional string admin_nickname = 7; //场控的昵称
    optional string mic_nickname   = 8; //被邀请连麦用户昵称
}

message PKMicDeclineMsg {
    optional uint64 uuid          = 1; //发起的主播id（场控发起传场控id）
    optional uint64 mic_uuid       = 2; //被pk用户id
    optional string mic_liveid     = 3; //被pk房间号
    optional uint32 type          = 4; //0:主播邀请 1：场控邀请
    optional uint64 admin_uuid    = 5; //场控id
    optional string nickname      = 6; //发起主播的昵称
    optional string admin_nickname = 7; //场控的昵称
    optional string mic_nickname   = 8; //被pk主播的昵称
}

message PKAdminEndMicMsg {
    optional uint64 zuid          = 1; //主播用户id
    optional string liveId        = 2; //房间号
    optional uint64 micuid        = 3; //对应的用户id
    optional uint64 admin_uuid    = 4; //场控id
}

message PKMicBusy {
    optional uint64 uuid          = 1; //处于busy状态的用户id
    optional uint64 liveid        = 2; //处于busy状态的liveid
    optional uint64 invite_uuid   = 3; //发起用户id
    optional uint64 zuid          = 4; //发起用户所在房间主播id
    optional string nickname      = 5; //处于busy状态的用户昵称
}
message PKNoHeartBeatMsg {
    optional NewPKInfo pk_info        = 1;
    optional uint64  crash_uuid       = 2; //无心跳方用户id
}